tests/baselines/reference/taggedTemplateWithConstructableTag01.errors.txt
taggedTemplateWithConstructableTag01.ts(3,1): error TS2349: This expression is not callable.
  Type 'typeof CtorTag' has no call signatures.


==== taggedTemplateWithConstructableTag01.ts (1 errors) ====
    class CtorTag { }
    
    CtorTag `Hello world!`;
    ~~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof CtorTag' has no call signatures.